guard m_controller with a QPointer

is possible it's null for an instant when the player quits
a call to start() in the moment between the app is closed and
the teardown is done is unlikely but apparently happens

BUG:361985